--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ djangorestframework==3.11.0
 python-decouple==3.4
 djangorestframework_simplejwt==4.7.2
 drf-yasg==1.20.0
+PyJWT==2.9.0
+sqlparse==0.5.1
+tzdata==2024.2
+asgiref==3.8.1
